compiler-core/src/parse/snapshots/gleam_core__parse__tests__missing_target.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@target()\npublic fn one() {}"
snapshot_kind: text
---
----- SOURCE CODE

@target()
public fn one() {}

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:8
  │
2 │ @target()
  │        ^ I was expecting a target name after this

Try `erlang`, `javascript`.
