compiler-core/src/parse/snapshots/gleam_core__parse__tests__multiple_internal_attributes.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@internal\n@internal\npublic fn main() -> Nil {\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@internal
@internal
public fn main() -> Nil {
  Nil
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:1
  │
3 │ @internal
  │ ^^^^^^^^^ Duplicate attribute

This attribute has already been given.
